--- a/css/progressive-image.css
+++ b/css/progressive-image.css
@@ -6,7 +6,7 @@ a.progressive {
 
 @media screen and (max-width: 799px) {
   a.progressive {
-    max-width: 100%; /* Full bleed look */
+    max-width: 101vw; /* Full bleed look */
     margin-left: -1.5%; /* Remove the LEFT table wrapper inner borderto create full bleed look */
   }
 }
